update operator route

--- a/src/app/operator/operator-permission/operator-permission.component.html
+++ b/src/app/operator/operator-permission/operator-permission.component.html
@@ -1,5 +1,5 @@
 <div [@flyIn]="active">
-    <p>this is a paragraph</p>
+    <p>this is a operator list</p>
     <ul>
         <li *ngFor="let operator of operators">
             {{ operator }}
